# rpi-pico

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  chassis-board.scad  configs-sample.cmake
3d-model/: chassis-board.scad  chassis-board.stl  cover.scad  side_groove.scad
mqtt-client/: .clangd  CMakeLists.txt  README.md  mqtt-client.c
src/: CMakeLists.txt  helper.c  helper.h
src/blink/: CMakeLists.txt
src/blink/src/: main.c
src/dht20/: CMakeLists.txt
src/dht20/src/: main.c
src/dht20/src/dht20/: CMakeLists.txt  dht20.c  dht20.h
src/mqtt-client/: .clangd  CMakeLists.txt  README.md  mqtt-client.c
src/mqtt-client/.cache/clangd/index/: MqttAPI.cpp.F99EA35F7C187BCE.idx  MqttAPI.h.5BDB8265DD5D229B.idx  MqttTest.cpp.3EB0DCCC6C7B25F3.idx  MqttTest.h.C4B3C2CC19893A5B.idx  lwipopts.h.3EA88094493409CC.idx  lwipopts.h.7188206300579729.idx  lwipopts.h.FA31070059D54B38.idx  mqtt-client.c.167D94D333794BDD.idx  mqtt-client.c.CF05BB354B0B0B03.idx
src/mqtt-sample-client/: CMakeLists.txt  mqtt-sample-client.c
src/mqtt-temp-collector/: CMakeLists.txt  crypto_consts.h  mqtt-temp-collector.c
src/mqtts-sample-client/: CMakeLists.txt  README.md  lwipopts.h  mbedtls_config.h  mqtts-sample-client.c
